# llama-inference-hip

./: CMakeLists.txt  README.md
include/: hip_kernels.h  model.h
src/: hip_kernels.cpp  main.cpp  tokenizer.cpp  transformer.cpp
